Added form to contact component

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,1 +1,11 @@
-<p>contact-form works!</p>
+<p>Thank you for your interest!<br>
+    I can be reached through the contact form below, by email at MaryArmstrong314@Gmail.com.<br>
+    I look forward to working with you.
+</p>
+
+<form>
+    <label>Name<input type="text" name="firstName" placeholder="Your Name"></label>
+    <label>Email<input type="email" name="email" placeholder="Your Email"></label>
+    <label>Message<textarea name="message" placeholder="Let me know what's going on!"></textarea></label>
+    <input type="submit" value="Send My Message!">
+</form>
