added navigation list to top bar and needed tags to link to

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,3 +1,5 @@
+<a name="contact"></a>
+
 <p>Thank you for your interest!<br>
     I can be reached through the contact form below, by email at MaryArmstrong314@Gmail.com.<br>
     I look forward to working with you.
