--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,1 +1,9 @@
-<p>top-nav works!</p>
+<a name="top"></a>
+<img src="assets/MARMS.png">
+<ul>
+    <li><a href="#portfolio">Example Works</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+</ul>
+
+<a href="#top">Return to Top</a>
