added footer html

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<div>
+    <p>&copy;2020 By Mary Armstrong</p>
+    <ul>
+        <li><a href="broken">GitHub</a></li>
+        <li><a href="broken">LinkedIn</a></li>
+        <li><a href="broken">Twitter</a></li>
+    </ul>
+</div>
