deleted portfolio-page and replaced with better named project display component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <landing></landing>
 </div>
 <div>
-  <portfolio-page></portfolio-page>
+  <project-display></project-display>
 </div>
 <div>
   <about-me></about-me>
