--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,7 +1,7 @@
 <a name="top"></a>
 <img src="assets/MARMS.png">
 <ul>
-    <li><a href="#portfolio">Example Works</a></li>
+    <li><a href="#projects">Example Works</a></li>
     <li><a href="#about">About</a></li>
     <li><a href="#contact">Contact</a></li>
 </ul>
