added html and data for project component

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,1 +1,6 @@
-<p>project works!</p>
+<div>
+    <img src="{{screenshot}}" alt="Oops! Missing photo!">
+    <p>{{projectName}}</p>
+    <p>{{description}}</p>
+    <p><span *ngFor="let keyword of keywords">{{keyword}}, </span></p>
+</div>
