--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,2 +1,12 @@
 <a name="about"></a>
-<p>about-me works!</p>
+
+<img src="assets/bad-pic-of-me.JPG" alt="This pic is not great. But it is me." width="300">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae necessitatibus, molestiae quisquam corrupti autem, esse, accusamus ullam labore a laborum earum.
+    Nisi facilis laudantium impedit recusandae, rerum praesentium optio eaque tempore sequi ut illo accusamus, quidem iusto maiores, velit ipsam!
+</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptatum perferendis ipsam voluptatem est eum, impedit veniam voluptates nesciunt corporis saepe 
+    libero laudantium obcaecati suscipit, eveniet, expedita natus sit architecto eaque commodi esse assumenda. Obcaecati.
+</p>
+
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eligendi cum nihil earum voluptates deleniti aliquam eaque, nam tempora et.</p>
