Added css icons to the nav-bar. Began mobile nav-bar positioning

--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,9 +1,11 @@
 <a name="top"></a>
-<img src="assets/MARMS.png">
-<ul>
-    <li><a href="#projects">Example Works</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#contact">Contact</a></li>
-</ul>
+<!-- <img src="assets/MARMS.png"> -->
+<div class="nav-bar">
+    <span class="wrapper"><a href="#top"><span class="gg-home"></span>Home</a></span>
+    <span class="wrapper"><a href="#projects"><span class="gg-folder"></span>Projects</a></span>
+    <span class="wrapper"><a href="#about"><span class="gg-website"></span>About</a></span>
+    <span class="wrapper"><a href="#contact"><span class="gg-mail"></span>Contact</a></span>
+</div>
 
-<a href="#top">Return to Top</a>
+
+
