Removed picture and icons in navbar for simplicity. moved nav bar to top and finished  styling for mobile

--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,10 +1,8 @@
-<a name="top"></a>
-<!-- <img src="assets/MARMS.png"> -->
 <div class="nav-bar">
-    <span class="wrapper"><a href="#top"><span class="gg-home"></span>Home</a></span>
-    <span class="wrapper"><a href="#projects"><span class="gg-folder"></span>Projects</a></span>
-    <span class="wrapper"><a href="#about"><span class="gg-website"></span>About</a></span>
-    <span class="wrapper"><a href="#contact"><span class="gg-mail"></span>Contact</a></span>
+    <a href="#top">Home</a>
+    <a href="#projects">Projects</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
 </div>
 
 
