--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,5 +1,7 @@
 <a name="about"></a>
 
+<img src="assets/MARMS.png">
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae necessitatibus, molestiae quisquam corrupti autem, esse, accusamus ullam labore a laborum earum.
     Nisi facilis laudantium impedit recusandae, rerum praesentium optio eaque tempore sequi ut illo accusamus, quidem iusto maiores, velit ipsam!
 </p>
