--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,7 @@
-<div>
-  <top-nav></top-nav>
-</div>
-<div>
-  <landing></landing>
-</div>
-<div>
-  <project-display></project-display>
-</div>
-<div>
-  <about-me></about-me>
-</div>
-<div>
-  <contact-form></contact-form>
-</div>
-<div>
-  <footer></footer>
-</div>
+<a name="top"></a>
+<top-nav></top-nav>
+<landing></landing>
+<project-display></project-display>
+<about-me></about-me>
+<contact-form></contact-form>
+<footer></footer>
