--- a/src/app/top-nav/top-nav.component.css
+++ b/src/app/top-nav/top-nav.component.css
@@ -3,172 +3,20 @@
 .nav-bar {
     background-color: rgb(24, 20, 58);
     position: fixed;
-    bottom: 0;
+    top: 0;
     width: 100%;
     margin: 0;
     padding: 0;
-}
-
-.warapper {
-
+    overflow: hidden;
     text-align: center;
-
-    margin: 0;
+    justify-content: center;
 }
 
 .nav-bar a {
-    text-align: center;
     text-decoration: none;
-    color: #999;
     display: inline-block;
-    padding: 1rem;
-    margin: 0;
-}
-
-
-
-/* Icons from CSS.GG under MIT license https://css.gg/doc/licence*/
-
-.gg-mail,
-.gg-mail::after {
-    display: block;
-    box-sizing: border-box;
-    height: 14px;
-    border: 2px solid
-}
-
-.gg-mail {
-    overflow: hidden;
-    transform: scale(var(--ggs,1));
-    position: relative;
-    width: 18px;
-    border-radius: 2px
-}
-
-.gg-mail::after {
-    content: "";
-    position: absolute;
-    border-radius: 3px;
-    width: 14px;
-    transform: rotate(-45deg);
-    bottom: 3px;
-    left: 0
-}
-
-.gg-home {
-    background:
-        linear-gradient(to left,
-            currentColor 5px,transparent 0)
-            no-repeat 0 bottom/4px 2px,
-        linear-gradient(to left,
-            currentColor 5px,transparent 0)
-            no-repeat right bottom/4px 2px;
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    transform: scale(var(--ggs,1));
-    width: 18px;
-    height: 14px;
-    border: 2px solid;
-    border-top: 0;
-    border-bottom: 0;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-    margin-bottom: -2px
-  }
-
-  .gg-home::after,
-  .gg-home::before {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute
-  }
-
-  .gg-home::before {
-    border-top: 2px solid;
-    border-left: 2px solid;
-    border-top-left-radius: 4px;
-    transform: rotate(45deg);
-    top: -5px;
-    border-radius: 3px;
-    width: 14px;
-    height: 14px;
-    left: 0
-  }
-
-  .gg-home::after {
-    width: 8px;
-    height: 10px;
-    border: 2px solid;
-    border-radius: 100px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom: 0;
-    left: 3px;
-    bottom: 0
-  }
-
-  .gg-folder {
-    transform: scale(var(--ggs,1))
-}
-
-.gg-folder,
-.gg-folder::after {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    width: 22px;
-    height: 16px;
-    border: 2px solid;
-    border-radius: 3px
-}
-
-.gg-folder::after {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 4px;
-    border-bottom: 0;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 4px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    top: -5px
-}
-
-.gg-website {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    transform: scale(var(--ggs,1));
-    width: 22px;
-    height: 18px;
-    border: 2px solid;
-    border-radius: 3px;
-    box-shadow: 0 -1px 0
-}
-.gg-website::after,
-.gg-website::before {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute;
-    width: 6px;
-    top: 2px
-}
-.gg-website::before {
-    background: currentColor;
-    left: 2px;
-    box-shadow: 0 4px 0,0 8px 0;
-    border-radius: 3px;
-    height: 2px
-}
-.gg-website::after {
-    height: 10px;
-    border: 2px solid;
-    right: 2px;
-    border-radius: 1px
+    color: #999;
+    text-align: center;
+    justify-content: center;
+    padding: 14px 16px;
 }
