Added background image with a gradient to landing component and some copy text for positioning.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <div>
     <p>&copy;2020 By Mary Armstrong</p>
+    <p>Background Photo by j.mt_photography from Pexels</p>
     <ul>
         <li><a href="broken">GitHub</a></li>
         <li><a href="broken">LinkedIn</a></li>
