--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,5 @@
-<p>landing works!</p>
+<div class="container">
+    <a name="top"></a>
+    <h1>Mary Armstrong</h1>
+    <p>Lorem ipsum dolor sit amet consectetur.</p>
+</div>
