Added base styling to the project component and set a background for the whole page. Changed all grey text color to be a cool grey to match the tone.

--- a/src/app/project-display/project-display.component.html
+++ b/src/app/project-display/project-display.component.html
@@ -1,4 +1,8 @@
 <a name="projects"></a>
 <div>
     <project></project>
+    <project></project>
+    <project></project>
+    <project></project>
+    <project></project>
 </div>
