--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,6 +1,7 @@
-<div>
+<div class="container">
     <img src="{{screenshot}}" alt="Oops! Missing photo!">
-    <p>{{projectName}}</p>
+    <h3>{{projectName}}</h3>
     <p>{{description}}</p>
-    <p><span *ngFor="let keyword of keywords">{{keyword}}, </span></p>
+    <p>Built with: <span *ngFor="let keyword of keywords" class="keyword">{{keyword}}</span></p>
+    <a href="{{githubLink}}">Github Link</a>
 </div>
