--- a/src/app/top-nav/top-nav.component.css
+++ b/src/app/top-nav/top-nav.component.css
@@ -15,7 +15,7 @@
 .nav-bar a {
     text-decoration: none;
     display: inline-block;
-    color: #999;
+    color: rgb(153, 153, 163);
     text-align: center;
     justify-content: center;
     padding: 14px 16px;
