--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,11 @@
 <div class="container">
     <a name="top"></a>
-    <h1>Mary Armstrong</h1>
-    <p>Lorem ipsum dolor sit amet consectetur.</p>
+
+    <div class="intro">
+        <p>Hi, my name is</p>
+        <h1>Mary Armstrong</h1>
+        <p> and I'm a full stack web developer. <br/>
+            Thanks for stopping in!
+        </p>
+    </div>
 </div>
