Added header for project-display component and styled projects to alternate left-right on the page

--- a/src/app/project-display/project-display.component.html
+++ b/src/app/project-display/project-display.component.html
@@ -1,8 +1,8 @@
 <a name="projects"></a>
 <div>
-    <project></project>
-    <project></project>
-    <project></project>
-    <project></project>
-    <project></project>
+    <h2>Highlighted Works</h2>
+    <div class="projects left"><project></project></div>
+    <div class="projects right"><project></project></div>
+    <div class="projects left"><project></project></div>
+    <div class="projects right"><project></project></div>
 </div>
