Added basic styling to the about me section

--- a/src/app/project/project.component.css
+++ b/src/app/project/project.component.css
@@ -11,8 +11,7 @@ img {
     border: double #222;
     border-radius: 5px;
     padding: 5px;
-    margin: 10px;
-    
+    margin: 2% 5%;
 }
 
 .keyword {
