Added bootstrap and began work fixing the project cards

--- a/src/app/project/project.component.css
+++ b/src/app/project/project.component.css
@@ -1,17 +1,5 @@
-a {
-    text-decoration: none;
-}
-
-img {
-    width: 100%;
-}
-
-.container {
+.card {
     background-color: rgb(225, 225, 235);
-    border: double #222;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 2% 5%;
 }
 
 .keyword {
@@ -19,7 +7,7 @@ img {
     border-radius: 5px;
     margin-right: 5px;
     padding: 2px;
-}
+} 
 
 .dot {
     margin: 5px;
