--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <top-nav></top-nav>
 <landing></landing>
+<div class="container">
 <project-display></project-display>
 <about-me></about-me>
 <contact-form></contact-form>
 <footer></footer>
+</div>
