--- a/src/app/project-display/project-display.component.html
+++ b/src/app/project-display/project-display.component.html
@@ -2,7 +2,7 @@
 <div>
     <h2>Highlighted Works</h2>
     <div class="projects left"><project></project></div>
-    <div class="projects right"><project></project></div>
+    <!-- <div class="projects right"><project></project></div>
     <div class="projects left"><project></project></div>
-    <div class="projects right"><project></project></div>
+    <div class="projects right"><project></project></div> -->
 </div>
