--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,16 +1,4 @@
-<div class="card" style="width: 18rem;">
-    <!-- <img class="card-img-top" src="{{screenshots[activeImg]}}" alt="A screenshot of the project!" (click)="nextImg()">
-
-    <div class="imgScrollBar">
-        <span class="arrow-left" (click) = "previousImg()"></span>
-
-        <span *ngFor="let screenshot of screenshots" class="dot"
-            [style.background-color]="activeImg === screenshots.indexOf(screenshot) ? 'rgb(24, 20, 58)' : 'rgb(163, 163, 173)'"
-            (click)="setImg(screenshots.indexOf(screenshot))"
-        ></span>
-
-        <span class="arrow-right" (click) = "nextImg()"></span>
-    </div> -->
+<div class="card my-2">
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
