added basic bootstrap and style to remaining components

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,8 @@
 <a name="about"></a>
 
-<div class="container">
-    <img src="assets/MARMS.png">
+<div class="container text-center">
+
+    <img src="assets/MARMS.png" class="img-fluid rounded my-2" alt="A pixel art drawing of Mary">
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae necessitatibus, molestiae quisquam corrupti autem, esse, accusamus ullam labore a laborum earum.
         Nisi facilis laudantium impedit recusandae, rerum praesentium optio eaque tempore sequi ut illo accusamus, quidem iusto maiores, velit ipsam!
@@ -11,5 +12,5 @@
         libero laudantium obcaecati suscipit, eveniet, expedita natus sit architecto eaque commodi esse assumenda. Obcaecati.
     </p>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eligendi cum nihil earum voluptates deleniti aliquam eaque, nam tempora et.</p>
+    <p>When I'm not coding I enjoy bookbinding, fountain pens, and making greeting cards by hand.</p>
 </div>
