--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,22 @@
-<div>
-    <p>&copy;2020 By Mary Armstrong</p>
-    <p>Background Photo by j.mt_photography from Pexels</p>
-    <ul>
-        <li><a href="broken">GitHub</a></li>
-        <li><a href="broken">LinkedIn</a></li>
-        <li><a href="broken">Twitter</a></li>
-    </ul>
+<div class="container-fluid">
+    <div class="text-center">
+        <div class="row">
+            <div class="col-6">
+                <small class="mx-auto">&copy;2020 By Mary Armstrong <br/>
+                Background Photo by <a class="text-secondary" href="https://www.pexels.com/@j-mt_photography-628996">j.mt_photography</a>
+                </small>
+
+                
+            </div>
+            <div class="col-6">
+                <small>
+                    <ul class="list-unstyled mx-auto">
+                        <li>Find me on:</li>
+                        <li><a class="text-secondary" href="https://github.com/Marms314">GitHub</a></li>
+                        <li><a class="text-secondary" href="https://www.linkedin.com/in/maryarmstrong314/">LinkedIn</a></li>
+                    </ul>
+                </small>
+            </div>
+        </div>
+    </div>
 </div>
