added fontawesome and added it to the links in the footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,8 +12,8 @@
                 <small>
                     <ul class="list-unstyled mx-auto">
                         <li>Find me on:</li>
-                        <li><a class="text-secondary" href="https://github.com/Marms314">GitHub</a></li>
-                        <li><a class="text-secondary" href="https://www.linkedin.com/in/maryarmstrong314/">LinkedIn</a></li>
+                        <li><a class="text-secondary" href="https://github.com/Marms314"><fa-icon [icon]="faGithub"></fa-icon> GitHub</a></li>
+                        <li><a class="text-secondary" href="https://www.linkedin.com/in/maryarmstrong314/"><fa-icon [icon]="faLinkedinIn"></fa-icon> LinkedIn</a></li>
                     </ul>
                 </small>
             </div>
